--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <p>Hello world</p>
+    <h1>Hello world</h1>
+    <h2>Some title</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni porro, adipisci praesentium ratione esse nulla animi fuga amet accusamus ad provident quasi incidunt velit tempora pariatur quibusdam consectetur, minima facere?</p>
 </body>
 </html>
