first commit to develop branch

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h2>Some title</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni porro, adipisci praesentium ratione esse nulla animi fuga amet accusamus ad provident quasi incidunt velit tempora pariatur quibusdam consectetur, minima facere?</p>
     <!--comment in html-->
+    <!--new branch develop created-->
+    <p>создана новая ветка develop</p>
 </body>
 </html>
