first commit into about branch

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <!--comment in html-->
     <!--new branch develop created-->
     <p>создана новая ветка develop</p>
+    <!--new branch about created-->
+    <p>создана новая ветка develop</p>
 </body>
 </html>
